--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,20 +13,20 @@
   url = "#skills"
   weight = 20
 
-#[[main]]
- # name = "Projects"
-  #url = "#projects"
-  #weight = 30
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 30
 
 #[[main]]
- # name = "Talks"
-  #url = "#talks"
-  #weight = 40
+  name = "Accomplishments"
+  url = "#accomplishments"
+  weight = 40
 
 #[[main]]
- # name = "Publications"
-  #url = "#featured"
-  #weight = 50
+  name = "Projects"
+  url = "#projects"
+  weight = 50
 
 [[main]]
   name = "Contact"
