--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,12 +18,12 @@
   url = "#experience"
   weight = 30
 
-#[[main]]
+[[main]]
   name = "Accomplishments"
   url = "#accomplishments"
   weight = 40
 
-#[[main]]
+[[main]]
   name = "Projects"
   url = "#projects"
   weight = 50
