--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,7 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "nikoschr96@yahoo.com"
+email = "nchristoforidis@protonmail.com"
 phone = "+30 694 017 7511"
 
 # Address
